merged branches and removed warnings